# anlGPT

./: .gitignore  README.md  constants.py  ingest.py  langchain_chat.py  langchain_chroma.py  langchain_faiss.py  langchain_grobid.py  llama.py  llama_chat.py  llama_demo.ipynb  llama_qa.py  main.py  model_const.py  pyproject.toml  run_chatbot.py  utils.py
data/grobid_files/: Chuhong_Chemistry_ofMaterials_2022.tei.xml  Doan_ChemofMat_2020.tei.xml  Doan_Digital_Discovery_2023.tei.xml  HaiQuin_JmatA_2022.tei.xml  Ilya_JMSol_2011.tei.xml  Logan_Graph_JPCA_2021.tei.xml  Morgan_ACS_Omega_2022.tei.xml  Morgan_PolInternational_2022.tei.xml  Naveen_JPCA_2020.tei.xml
data/txts/: Badri_ChemicalScience_2019.txt  Doan_ChemofMat_2020.txt  Doan_Digital_Discovery_2023.txt  HaiQuin_JmatA_2022.txt  Ilya_JMSol_2011.txt  Logan_Graph_JPCA_2021.txt  Naveen_JPCA_2022.txt
demo/: demo2.ipynb  langchain_demo.ipynb  llama_demo.ipynb
faiss/faiss_index/: index.pkl
faiss_grobid/faiss_index/: index.faiss  index.pkl
grobid_files/: Badri_ChemicalScience_2019.tei.xml  Garvit_Chemistry_ofMat_2022.tei.xml  Naveen_JPCA_2022.tei.xml  activelearning_and_materials_design_the_example_of_high_glass_transition_temperature_polymers.tei.xml
pdfs/txts/: Badri_ChemicalScience_2019.txt  Chuhong_Chemistry_ofMaterials_2022.txt  Doan_ChemofMat_2020.txt  Doan_Digital_Discovery_2023.txt  Garvit_Chemistry_ofMat_2022.txt  HaiQuin_JmatA_2022.txt  Ilya_JMSol_2011.txt  Logan_Graph_JPCA_2021.txt  Morgan_ACS_Omega_2022.txt  Morgan_PolInternational_2022.txt  (+3 more)
storage/: docstore.json  index_store.json
(+1 files in other folders)
